# HW1

./: .gitignore  Dockerfile  README.md  clearml.conf  docker-compose.yaml  model_manager.py  pyproject.toml  requirements.txt
.dvc/: config
api/: ClearML.ipynb  main.py  model_manager.py
api/grpc/: example.ipynb  main.py  main_pb2.pyi  main_pb2_grpc.py  model_manager.py
api/grpc/data_example/: data.csv
api/grpc/protos/: main.proto
api/grps/: example.ipynb  main.proto  main.py  main_pb2.py  main_pb2.pyi  model_manager.py
api/grps/protos/: main.proto
api/rest/: main.py
clearml/: docker-compose-win10.yml  docker-compose.yml
dashboard/: app.py
data/: .gitignore  data.json  data.json.dvc  train_4fb84cb8-877a-42be-bbcc-924ec042dacf.json.dvc  train_568a4bae-066b-4b6a-8747-d28e92c2c6c9.json.dvc  train_5708408e-de06-45f2-adc5-1eb78c73876e.json.dvc  train_f2ed0a6a-72eb-4c30-832a-3015e0521ecd.json.dvc  train_f927d2fc-6643-4793-9c8c-3b633691e29c.json.dvc
dev/: KEK.ipynb
models/: model_manager.py
