[tool.poetry]
name = "mlops-hw1"
version = "0.1.0"
description = ""
authors = ["staroverovaanna <staroverovaann0011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
pandas = "^2.2.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
scikit-learn = "^1.5.2"
requests = "^2.32.3"
streamlit = "^1.40.1"
pydantic = "^2.9.2"
uuid = "^1.30"
grpcio = "^1.67.1"
grpcio-tools = "^1.67.1"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
